--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Courseraaaa</title>
+	<title>Hello Coursera</title>
 </head>
 <body>
 <h1> Hello Coursera! I'm Cutee!</h1>
